lin spacing fix

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ nav {
 }
 
 .humburger {
-  padding-left: 225px;
+  padding-left: 205px;
   padding-top: 20px;
 }
 
@@ -111,7 +111,6 @@ h2 {
 .details h2 {
   padding-left: 25px;
 }
-
 
 p {
   font-family: 'Poppins', sans-serif;
